--- a/blog_tweetawatt.html
+++ b/blog_tweetawatt.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>DIY Energy &mdash; Free HTML5 Bootstrap Website Template by FreeHTML5.co</title>
+	<title>DIY Energy &mdash; 2020 ITP Thesis by Sid Chou</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -71,20 +71,19 @@
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li class="fh5co-active"><a href="intro.html">Intro</a></li>
+					<li><a href="resources.html">Resources</a></li>
 					<li><a href="learn.html">Learn</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="https://www.sidchou.net/">Contact</a></li>
 				</ul>
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small>&copy; 2016 Blend Free HTML5. All Rights Reserved.</span> <span>Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> <span>Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></span></small></p>
+				<p><small>2020 ITP Thesis project</span> <span>Created by <a href="http://www.sidchou.net/">Sid Chou</a> </span> <span>Template reference: <a href="https://freehtml5.co/" target="_blank">FreeHTML5.co</a></span></small></p>
 				<ul>
-					<li><a href="#"><i class="icon-facebook2"></i></a></li>
-					<li><a href="#"><i class="icon-twitter2"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+					<!-- <li><a href="#"><i class="icon-facebook2"></i></a></li> -->
+					<!-- <li><a href="#"><i class="icon-twitter2"></i></a></li> -->
+					<li><a href="https://www.instagram.com/sidchou/"><i class="icon-instagram"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/sidchou/"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
 
@@ -255,7 +254,7 @@
 									<img src="images/blog/killawatt/build_16.jpg" alt="current calibration" style="max-height: 250px;max-width: 100%;">
 									<p>
 										Now the sensor is calibrated, and you can use the micro-controllet to connect to another device or output, add a display back, send to a database, etc.
-										
+
 									</p>
 
 
