--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-	<head>
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>DIY Energy &mdash; Free HTML5 Bootstrap Website Template by FreeHTML5.co</title>
+	<title>DIY Energy &mdash; 2020 ITP Thesis by Sid Chou</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
-  	<!--
+	<!--
 	//////////////////////////////////////////////////////
 
 	FREE HTML5 TEMPLATE
@@ -27,12 +29,12 @@
 	//////////////////////////////////////////////////////
 	-->
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -61,8 +63,9 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
+</head>
+
+<body>
 	<div id="fh5co-page">
 		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
 		<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
@@ -71,20 +74,19 @@
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li class="fh5co-active"><a href="index.html">Home</a></li>
-					<li><a href="intro.html">Intro</a></li>
+					<li><a href="resources.html">Resources</a></li>
 					<li><a href="learn.html">Learn</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="https://www.sidchou.net/">Contact</a></li>
 				</ul>
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small>&copy; 2016 Blend Free HTML5. All Rights Reserved.</span> <span>Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> <span>Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></span></small></p>
+				<p><small>2020 ITP Thesis project</span> <span>Created by <a href="http://www.sidchou.net/">Sid Chou</a> </span> <span>Template reference: <a href="https://freehtml5.co/" target="_blank">FreeHTML5.co</a></span></small></p>
 				<ul>
-					<li><a href="#"><i class="icon-facebook2"></i></a></li>
-					<li><a href="#"><i class="icon-twitter2"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+					<!-- <li><a href="#"><i class="icon-facebook2"></i></a></li> -->
+					<!-- <li><a href="#"><i class="icon-twitter2"></i></a></li> -->
+					<li><a href="https://www.instagram.com/sidchou/"><i class="icon-instagram"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/sidchou/"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
 
@@ -94,24 +96,24 @@
 			<aside id="fh5co-hero" class="js-fullheight">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<!-- <li style="background-image: url(images/img_bg_3.jpg);"> -->
+						<!-- <li style="background-image: url(images/img_bg_3.jpg);"> -->
 						<li style="background-color: steelblue;">
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
-					   				<div class="slider-text-inner">
-					   					<h1>DIY ENERGY</h1>
+							<div class="overlay"></div>
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
+										<div class="slider-text-inner">
+											<h1>DIY ENERGY</h1>
 											<h2>Learn about energy and electronics</h2>
 											<h3>Thesis project by Sid Chou at ITP NYU</h3>
 											<p><a href="intro.html" class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
-					   				</div>
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-				  	</ul>
-			  	</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</aside>
 
 			<div class="fh5co-narrow-content">
@@ -124,15 +126,36 @@
 							<div class="desc">
 								<h2>Introduction</h2>
 								<span><small>by Sid Chou </small> / <small> <i class="icon-comment"></i> 05.01.2020</small></span>
-								<p>Going through the two years of ITP, I’m sure that I’m not alone to say that we all get pretty good at researching,
-									whether on a scientific study, or learning about electronic circuitry. Although, we still often struggle doing it,
-									due to different reasons, might be because the documentation wasn’t clear, the subject was explained too high or
-									low level (too abstracted or too detailed), or the technology was obsolete. That is the motivation of my thesis.
-									I chose the topic of energy monitor, which is a subject that I worked on during my time in ITP with one of the
-									clubs, ITPower, going into detail of the process of research, roadblocks, mistakes and relevant resources.
-									The goal is to make a repository of information not only as a journey of my learning, but also a road map for
-									whoever wanted to build their own energy monitor.</p>
+								<p>Having gone through two years at ITP, I’m sure I’m not alone in saying that we have all become pretty good at figuring things out through research, whether for a scientific study or to learn more about something like electronic circuitry.
+									Despite doing a lot of this kind of research, we still often struggle with it for any number of reasons. Sometimes, the documentation isn’t clear, sometimes the explanations are too high or low level (too abstract or too detailed), and
+									sometimes the technology described is out of date or obsolete. This is the motivation for my thesis project. In particular, I chose the topic of energy monitoring, which is something I’ve worked on a lot during my time at ITP with one of
+									the clubs, ITPower, spending time searching for relevant resources, confronting roadblocks and making mistakes. I’ve learned that energy monitoring is important because most people are unaware of how much power they consume using shop
+									equipment, especially when certain machines are left on, which is not good for energy conservation and can also be costly. The goal for my thesis project was to make a repository of information about energy monitoring in maker spaces, shops
+									or at home, documenting not only my learning journey, but also providing a road map for others to use to better understand and build their own energy monitors.</p>
+									<br>
+								<p>As mentioned above, my thesis project originated from the work I did with the ITPower Club.
+									The initial goal of the ITPower club was, I think, to reduce energy waste on the laser cutter. This
+									goal was determined before I joined. Unfortunately, the ITPower Club project wasn’t completed,
+									and is now on pause. Consequently, part of my thesis research was investigating why the
+									project wasn’t completed and figuring out what was still left to be done. I also searched for other
+									methods of building current sensors beyond what we were doing in the ITPower Club. When I
+									found a variety of “how to” tutorials out there, I decided to focus my thesis effort on collecting
+									and organizing the available information. Consequently, my thesis prototype became a web
+									platform for citizen scientists and STEM enthusiasts to learn more about DIY power monitoring.
+									An additional audience for my website may be people with energy consumption concerns at
+									home, as I found through my research, that informational material and programs can be
+									successful in helping people achieve higher energy efficiency at home.
+								</p>
+								<br>
+								<p>
+									My thesis project, DIY Energy, is a website that provided information about different methods for understanding and monitoring energy consumption. This kind of information is typically available as either open source or closed source. Open
+									source materials are usually more flexible, but require more work to set up. On the other hand, closed source materials allow users to basically get to work out of the box. With only a simple installation or even paying someone for
+									installation, with closed source materials you can have something working without having to build or add anything yourself, either with an app or ready-made web-based software. Sometimes, closed source products provide you with an API to
+									access your data for other purposes, however, data privacy is a concern in this day and age.
 
+									More on the Project or Further reading (up to 1,500 words) *optional - This should be a free space, where students can explain your project more fully: a deeper description, a personal statement, your process, user testing,etc. You can do
+									that by including hyperlinks here, or embedding video, images, gifs, or sound files.
+								</p>
 
 								<!-- <a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a> -->
 							</div>
@@ -161,5 +184,6 @@
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
