--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>DIY Energy &mdash; Free HTML5 Bootstrap Website Template by FreeHTML5.co</title>
+	<title>DIY Energy &mdash; 2020 ITP Thesis by Sid Chou</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -71,20 +71,19 @@
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li class="fh5co-active"><a href="intro.html">Resources</a></li>
+					<li class="fh5co-active"><a href="resources.html">Resources</a></li>
 					<li><a href="learn.html">Learn</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="https://www.sidchou.net/">Contact</a></li>
 				</ul>
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small>&copy; 2016 Blend Free HTML5. All Rights Reserved.</span> <span>Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> <span>Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></span></small></p>
+				<p><small>2020 ITP Thesis project</span> <span>Created by <a href="http://www.sidchou.net/">Sid Chou</a> </span> <span>Template reference: <a href="https://freehtml5.co/" target="_blank">FreeHTML5.co</a></span></small></p>
 				<ul>
-					<li><a href="#"><i class="icon-facebook2"></i></a></li>
-					<li><a href="#"><i class="icon-twitter2"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+					<!-- <li><a href="#"><i class="icon-facebook2"></i></a></li> -->
+					<!-- <li><a href="#"><i class="icon-twitter2"></i></a></li> -->
+					<li><a href="https://www.instagram.com/sidchou/"><i class="icon-instagram"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/sidchou/"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
 
@@ -105,40 +104,38 @@
 									<li><a href="https://www.arduino.cc/">Arduino</a>
 										<ul>
 											<li>sample rate</li>
-											<li></li>
-											<li></li>
 										</ul>
 									</li>
 									<li>Osiliscope
 										<ul>
 											<li>note on using Osiliscope</li>
-											<li></li>
-											<li></li>
 										</ul>
 									</li>
-									<li>Electric Meter</li>
+									<li>MultiMeter</li>
 									<li>Soldering Supplies</li>
-									<li></li>
 
 								</ul>
-								<ul><big><b>Chip/Device</b></big>
+								<!-- <ul><big><b>Chip/Device</b></big>
 									<li></li>
 									<li></li>
 									<li></li>
 									<li></li>
-									<li></li>
+									<li></li> -->
 
 								</ul>
 								<ul><big><b>Reaserch</b></big>
-									<li></li>
-									<li></li>
-									<li></li>
-									<li></li>
-									<li></li>
+									<li><a href="https://itp.nyu.edu/classes/itpower/">ITPower</a> </li>
+									<li> <a href="https://www.nrel.gov/docs/fy17osti/68573.pdf">Chapter 17: Residential Behavior Evaluation Protocol<a></li>
+									<li> <a href="https://www.aceee.org/sites/default/files/publications/researchreports/b1601.pdf">Behavior Change Programs: Status and Impact</a></li>
+									<li> <a href="https://www.youtube.com/watch?v=ZnJeA4-42W4"> NILM) Technology & Energy Disaggregation | Sustainability Live 2015</a></li>
+								
 
 								</ul>
 
-
+								ITPower, itp.nyu.edu/classes/itpower/.
+								Sussman, Reuven and Chikumbo, Maxine. Behavior Change Programs: Status and Impact - ACEEE | ACEEE. Oct. 2016, d.
+								Stewart, James. and Todd, Annika. Chapter 17: Residential Behavior Evaluation Protocol | National Renewable Energy Laboratory. Oct, 17
+c
 
 								<!-- <a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a> -->
 							</div>
