fix link on home page and fontsize

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 											<h1>DIY ENERGY</h1>
 											<h2>Learn about energy and electronics</h2>
 											<h3>Thesis project by Sid Chou at ITP NYU</h3>
-											<p><a href="intro.html" class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
+											<p><a href="learn.html" class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
 										</div>
 									</div>
 								</div>
