--- a/resources.html
+++ b/resources.html
@@ -127,12 +127,12 @@
 									<li><a href="https://itp.nyu.edu/classes/itpower/">ITPower</a> </li>
 									<li> <a href="https://www.nrel.gov/docs/fy17osti/68573.pdf">Chapter 17: Residential Behavior Evaluation Protocol<a></li>
 									<li> <a href="https://www.aceee.org/sites/default/files/publications/researchreports/b1601.pdf">Behavior Change Programs: Status and Impact</a></li>
-									<li> <a href="https://www.youtube.com/watch?v=ZnJeA4-42W4"> NILM) Technology & Energy Disaggregation | Sustainability Live 2015</a></li>
+									<li> <a href="https://www.youtube.com/watch?v=ZnJeA4-42W4"> (NILM) Technology & Energy Disaggregation | Sustainability Live 2015</a></li>
 
 
 								</ul>
 
-								
+
 
 								<!-- <a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a> -->
 							</div>
